<resources>
    <string name="app_name">Poke-Tracker</string>
    <string name="subtitle">Register New Catch</string>
    <string name="natlnum">National Number</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gen">Gender</string>
    <string name="ht">Height</string>
    <string name="wgt">Weight</string>
    <string name="lvl">Level</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="basestats">Base Stats</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unk</string>
    <string name="ntnlDefault">896</string>
    <string name="nameDefault">Glastrier</string>
    <string name="speciesDefault">Wild Horse Pokemon</string>
    <string name="heightDefault">2.2 m</string>
    <string name="weightDefault">800.0 kg</string>
    <string name="baseStatsDefault">0</string>
    <string name="chgeBckd">Change Background</string>

    <string-array name="levelValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
</resources>