<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/backgroundPurple"
    android:id="@+id/mainPageT"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:text="@string/subtitle"
        android:textAlignment="center" />



    <TableRow>

        <TextView
            android:id="@+id/nationalNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/natlnum" />

        <EditText
            android:id="@+id/ntnlNumEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/name" />
        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/speciesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/species" />


        <EditText
            android:id="@+id/speciesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            />
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/gen" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="260dp"
            android:layout_height="51dp">

            <RadioButton
                android:id="@+id/femaleRdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="4dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/unkRdButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="-37.5dp"
                android:paddingHorizontal="4dp"
                android:text="@string/unknown" />

            <RadioButton
                android:id="@+id/male_RB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="-37.5dp"
                android:paddingHorizontal="4dp"
                android:text="@string/male" />

        </RadioGroup>

    </TableRow>



    <TableRow>

        <TextView
            android:id="@+id/heightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/ht" />

        <EditText
            android:id="@+id/heightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/weightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/wgt" />

        <EditText
            android:id="@+id/weightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            />
    </TableRow>

    <TableRow android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/lvl" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="163dp"
            android:layout_height="32dp"
            android:entries="@array/levelValues" />

    </TableRow>


    <TextView
        android:id="@+id/baseStatsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/basestats"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableRow>

        <TextView
            android:id="@+id/hpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/hp" />

        <EditText
            android:id="@+id/hpEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/attackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/attack" />

        <EditText
            android:id="@+id/attackEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/defenseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/defense" />

        <EditText
            android:id="@+id/defenseEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />
    </TableRow>

    //

    <TableRow
        android:layout_width="379dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/backgroundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chgeBckd"
            android:textSize="12sp" />
    </TableRow>


</TableLayout>