<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text"
        android:text="Glastrier"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/speciesEdit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/speciesEdit"
        app:layout_constraintTop_toBottomOf="@+id/ntnlNumEdit" />

    <EditText
        android:id="@+id/heightEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="2.2 m"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/weightEdit"
        app:layout_constraintStart_toStartOf="@+id/weightEdit"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/subtitle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/nationalNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/natlnum"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/speciesText"
        app:layout_constraintStart_toStartOf="@+id/speciesText"
        app:layout_constraintTop_toBottomOf="@+id/nationalNumText" />

    <TextView
        android:id="@+id/speciesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/species"
        app:layout_constraintEnd_toEndOf="@+id/genderText"
        app:layout_constraintStart_toStartOf="@+id/genderText"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/gen"
        app:layout_constraintEnd_toEndOf="@+id/heightText"
        app:layout_constraintStart_toStartOf="@+id/heightText"
        app:layout_constraintTop_toBottomOf="@+id/speciesText" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/ht"
        app:layout_constraintEnd_toEndOf="@+id/weightText"
        app:layout_constraintStart_toStartOf="@+id/weightText"
        app:layout_constraintTop_toBottomOf="@+id/genderText" />

    <TextView
        android:id="@+id/baseStatsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/basestats"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/hpText"
        app:layout_constraintStart_toStartOf="@+id/hpText"
        app:layout_constraintTop_toBottomOf="@+id/levelText" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/wgt"
        app:layout_constraintEnd_toEndOf="@+id/levelText"
        app:layout_constraintStart_toStartOf="@+id/levelText"
        app:layout_constraintTop_toBottomOf="@+id/heightText" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/lvl"
        app:layout_constraintEnd_toEndOf="@+id/baseStatsHeader"
        app:layout_constraintStart_toStartOf="@+id/baseStatsHeader"
        app:layout_constraintTop_toBottomOf="@+id/weightText" />

    <TextView
        android:id="@+id/hpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/hp"
        app:layout_constraintEnd_toEndOf="@+id/attackText"
        app:layout_constraintStart_toStartOf="@+id/attackText"
        app:layout_constraintTop_toBottomOf="@+id/baseStatsHeader" />

    <TextView
        android:id="@+id/attackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/attack"
        app:layout_constraintEnd_toEndOf="@+id/defenseText"
        app:layout_constraintStart_toStartOf="@+id/defenseText"
        app:layout_constraintTop_toBottomOf="@+id/hpText" />

    <TextView
        android:id="@+id/defenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp"
        android:text="@string/defense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackText" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="9dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="9dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resetButton" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="222dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/heightEdit"
        app:layout_constraintStart_toStartOf="@+id/heightEdit"
        app:layout_constraintTop_toBottomOf="@+id/speciesEdit">


        <RadioButton
            android:id="@+id/femaleRdButton"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/maleRdButton"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/unkRdButton"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:text="@string/unknown"
            android:textSize="12sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/defenseEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackEdit" />

    <EditText
        android:id="@+id/weightEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="800.0 kg"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/heightEdit" />

    <EditText
        android:id="@+id/hpEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/attackEdit"
        app:layout_constraintStart_toStartOf="@+id/attackEdit"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/attackEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/defenseEdit"
        app:layout_constraintStart_toStartOf="@+id/defenseEdit"
        app:layout_constraintTop_toBottomOf="@+id/hpEdit" />

    <EditText
        android:id="@+id/speciesEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text"
        android:text="Wild Horse Pokemon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <EditText
        android:id="@+id/ntnlNumEdit"
        android:layout_width="217dp"
        android:layout_height="35dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number"
        android:text="896"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/nameEdit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nameEdit"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="231dp"
        android:layout_height="23dp"
        android:layout_marginTop="40dp"
        android:entries="@array/levelValues"
        app:layout_constraintEnd_toEndOf="@+id/hpEdit"
        app:layout_constraintStart_toStartOf="@+id/hpEdit"
        app:layout_constraintTop_toBottomOf="@+id/weightEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>